--- a/.github/workflows/extract-stage-types.yml
+++ b/.github/workflows/extract-stage-types.yml
@@ -64,6 +64,12 @@ jobs:
         GAS_WEBHOOK_URL: ${{ secrets.GAS_WEBHOOK_URL }}
       run: |
         cd scripts
+        echo "🔍 Environment check:"
+        echo "  GAS_WEBHOOK_URL is set: $([[ -n "$GAS_WEBHOOK_URL" ]] && echo "YES" || echo "NO")"
+        echo "  GAS_WEBHOOK_URL length: ${#GAS_WEBHOOK_URL}"
+        if [[ -n "$GAS_WEBHOOK_URL" ]]; then
+          echo "  GAS_WEBHOOK_URL starts with: ${GAS_WEBHOOK_URL:0:50}..."
+        fi
         echo "🔍 Starting stage types analysis..."
         node extract-stage-types.js
     
